force-app/main/default/objects/Dentista__c/Dentista__c.object-meta.xml
<CustomObject>
    <label>Dentista</label>
    <nameField>
        <label>Nome de Dentista</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dentistas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>