force-app/main/default/objects/Dentista__c/fields/cro__c.field-meta.xml
<CustomField>
    <fullName>cro__c</fullName>
    <description>numero e uf</description>
    <label>cro</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>