force-app/main/default/objects/Dentista__c/fields/Especialidade__c.field-meta.xml
<CustomField>
    <fullName>Especialidade__c</fullName>
    <label>Especialidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clínico Geral</fullName>
            </value>
            <value>
                <fullName>Endodontia</fullName>
            </value>
            <value>
                <fullName>Ortodontia</fullName>
            </value>
            <value>
                <fullName>Implantodontia</fullName>
            </value>
            <value>
                <fullName>Periodontia</fullName>
            </value>
            <value>
                <fullName>Cirurgia</fullName>
            </value>
            <value>
                <fullName>Odontopediatria</fullName>
            </value>
            <value>
                <fullName>Prótese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>