force-app/main/default/objects/Dentista__c/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <label>Telefone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>